--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/images/fav.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/src/main.jsx" defer></script>
-    <title>Audio Streaming Platform</title>
+    <title>Audio Streaming Platform - Musics, Artists and More</title>
   </head>
   <body>
     <div id="root"></div>
